Change: Implement copy driver task as MSBuild script, and remove install/uninstall PowerShell scripts.
- Because future version of NuGet will not support PowerShell script. (see also: http://blog.nuget.org/20150729/Introducing-nuget-uwp.html)

--- a/Selenium.WebDriver.MicrosoftWebDriver.nuspec
+++ b/Selenium.WebDriver.MicrosoftWebDriver.nuspec
@@ -27,9 +27,7 @@
     </releaseNotes>
   </metadata>
   <files>
-    <file src="README-MicrosoftWebDriver.txt" target="content"/>
     <file src="MicrosoftWebDriver.exe" target="driver"/>
-    <file src="Install.ps1" target="tools"/>
-    <file src="Uninstall.ps1" target="tools"/>
+    <file src="Selenium.WebDriver.MicrosoftWebDriver.targets" target="build"/>
   </files>
 </package>
